hw19/code/network.tf
# Create VPC
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"

  tags = {
    Name = "${local.project_prefix}-main"
  }
}


# Create public subnets
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnets_cidr.public_a
  availability_zone       = "${var.aws_region}a"
  map_public_ip_on_launch = true

  tags = {
    Name = "${local.project_prefix}-public-a"
  }
}

resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnets_cidr.public_b
  availability_zone       = "${var.aws_region}b"
  map_public_ip_on_launch = true

  tags = {
    Name = "${local.project_prefix}-public-b"
  }
}


# Create private subnets
resource "aws_subnet" "private_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.subnets_cidr.private_a
  availability_zone = "${var.aws_region}a"

  tags = {
    Name = "${local.project_prefix}-private-a"
  }
}

resource "aws_subnet" "private_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.subnets_cidr.private_b
  availability_zone = "${var.aws_region}b"

  tags = {
    Name = "${local.project_prefix}-private-b"
  }
}


# Create IGW
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${local.project_prefix}-igw"
  }
}


# Create elastic ip
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "${local.project_prefix}-eip"
  }
}


# NAT GW
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_a.id

  tags = {
    Name = "${local.project_prefix}-nat"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.main]
}


# Create public route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "${local.project_prefix}-public-rt"
  }
}


# Create private route table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id # WARNING HERE NAT_!!!!!!!
  }

  tags = {
    Name = "${local.project_prefix}-private-rt"
  }
}


# Associate public subnets to public rt
resource "aws_route_table_association" "public_a_to_public_rt" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b_to_public_rt" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}


# Associate private subnets to private rt
resource "aws_route_table_association" "private_a_to_private_rt" {
  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b_to_private_rt" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id
}
